# flashcard_generator

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: python-verification.yml  verification.yml
run/: latin.py
src/flashcard_generator/: __init__.py  generator.py
tests/: conftest.py  test_generator.py
