[tool.poetry]
name = "flashcard-generator"
version = "0.1.0"
description = ""
authors = ["Steven Van Ingelgem <steven@vaningelgem.be>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
reportlab = "^4.2.2"

[tool.poetry.group.test.dependencies]
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
